--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
 <footer>
     {%- if site.license -%}
     <small>{{ site.license }}</small>
+    &nbsp;
     {%- endif -%}
     <small>
         Made with
-        <a href="https://jekyllrb.com">Jekyll</a>
+        <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
         and
-        <a href="https://github.com/LunaRoseManor/jekyll-string-theory/">String Theory</a>
+        <a href="https://github.com/LunaRoseManor/jekyll-string-theory/" target="_blank">String Theory</a>
     </small>
 </footer>
