--- a/assets/main.sass
+++ b/assets/main.sass
@@ -17,7 +17,7 @@ $color-cyan: #8BE9FD
 $color-pink: #FF79C6
 
 // Margins and padding
-$padding: 0.5em
+$padding: 1em
 
 /*
  * Custom styles
@@ -51,12 +51,12 @@ html, body
 
 body
     box-sizing: border-box
-    color: $color-text
+    color: $color-foreground
     line-height: 2em
     font-family: "Arial", "Helvetica", sans-serif
     font-size: 16pt
     max-width: 36em
-    padding: 2em
+    padding: $padding
 
 main
     flex-grow: 1
@@ -70,8 +70,8 @@ header, footer
 nav
     border-top: 1px solid $color-comment
     border-bottom: 1px solid $color-comment
-    padding-top: 1em
-    padding-bottom: 1em
+    padding-top: $padding
+    padding-bottom: $padding
 
     a
         margin-right: 1em
