--- a/assets/main.sass
+++ b/assets/main.sass
@@ -1,6 +1,9 @@
 ---
 ---
 
+/*
+ * Custom styles
+ */
 // Colour scheme based off the Dracula syntax highlighting theme
 // Source: https://github.com/dracula/atom/blob/f6ff68052107a7f278e57215960080605d2c24c3/styles/colors.less
 // dracula colors
@@ -19,9 +22,13 @@ $color-pink: #FF79C6
 // Margins and padding
 $padding: 1em
 
-/*
- * Custom styles
- */
+@font-face
+    font-family: Roboto
+    src: url("/assets/ttf/Roboto/Roboto-Light.ttf")
+
+body, html
+    font-family: Roboto, sans-serif
+
 a
     color: $color-cyan
     text-decoration: none
@@ -53,7 +60,7 @@ body
     box-sizing: border-box
     color: $color-foreground
     line-height: 2em
-    font-family: "Arial", "Helvetica", sans-serif
+    //font-family: "Arial", "Helvetica", sans-serif
     font-size: 16pt
     max-width: 36em
     padding: $padding
