--- a/assets/main.sass
+++ b/assets/main.sass
@@ -22,20 +22,13 @@ $color-pink: #FF79C6
 // Margins and padding
 $padding: 1em
 
-@font-face
-    font-family: Roboto
-    src: url("/assets/ttf/Roboto/Roboto-Light.ttf")
-
-body, html
-    font-family: Roboto, sans-serif
-
 a
     color: $color-cyan
     text-decoration: none
 
     &:hover
         color: $color-comment
-        text-decoration: underline        
+        text-decoration: underline
 
 header, main, footer
     padding: $padding
@@ -60,7 +53,7 @@ body
     box-sizing: border-box
     color: $color-foreground
     line-height: 2em
-    //font-family: "Arial", "Helvetica", sans-serif
+    font-family: "Arial", "Helvetica", sans-serif
     font-size: 16pt
     max-width: 36em
     padding: $padding
