--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,12 @@
 <html lang="{{ site.lang }}">
     {%- include head.html -%}
     <body>
-        {%- include header.html -%}
+        <div class="wrapper">
+            {%- include header.html -%}
         
-        <main>{{ content }}</main>
+            <main>{{ content }}</main>
 
-        {%- include footer.html -%}
+            {%- include footer.html -%}
+        </div>
     </body>
 </html>
