--- a/assets/main.sass
+++ b/assets/main.sass
@@ -7,7 +7,7 @@
 // Source: https://github.com/dracula/atom/blob/f6ff68052107a7f278e57215960080605d2c24c3/styles/colors.less
 // dracula colors
 $color-background: #282A36
-$color-foreground: #F8F8F2
+$color-foreground: #FFFFFF
 $color-selection: #44475A
 $color-comment: #6272A4
 $color-red: #FF5555
