--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }} &vert; {{ site.title }}</title>
+    <title>
+        {%- if page.title -%}
+            {{ page.title }}
+            &vert;&nbsp;
+        {%- endif -%}
+        {{ site.title }}
+    </title>
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {%- if site.styles -%}
         {%- for style in site.styles -%}
