--- a/assets/main.sass
+++ b/assets/main.sass
@@ -70,6 +70,7 @@ html
 body
     height: 100%
     font: 16pt Helvetica Neue, Helvetica, Arial, sans-serif
+    line-height: 2em
     padding: 0
     margin: 0
 
