--- a/assets/main.sass
+++ b/assets/main.sass
@@ -24,6 +24,10 @@ $padding: 1em
 // Width and height
 $width: 36em
 
+// Header fix
+header h1, header a
+    margin-top: 0
+
 // Navbar
 nav
     padding-top: $padding
