--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,6 @@
 ---
-layout: default
+layout: base
 ---
-
-<style>
-    h3.h2 {
-        color: rebeccapurple;
-    }
-</style>
 
 {%- if page.title -%}
     <div class="page-header">
