--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,13 @@
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{%- if page.title and if site.title -%}{{ page.title }} &vert; {{ site.title }}{%- endif -%}</title>
+    <title>{{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {%- if site.styles -%}
         {%- for style in site.styles -%}
-        <link rel="stylesheet" href="{{ style | relative_url }}">
+            <link rel="stylesheet" href="{{ style | relative_url }}">
+            test
         {%- endfor -%}
     {%- endif -%}
     <meta name="description" content="{{ site.description }}">
