--- a/assets/main.sass
+++ b/assets/main.sass
@@ -1,107 +1,11 @@
 ---
 ---
-
-@import syntax-highlighting
-
-// Colour scheme based off the Dracula syntax highlighting theme
-// Source: https://github.com/dracula/atom/blob/f6ff68052107a7f278e57215960080605d2c24c3/styles/colors.less
-// dracula colors
-$color-background: #282A36
-$color-foreground: #FFFFFF
-$color-selection: #44475A
-$color-comment: #6272A4
-$color-red: #FF5555
-$color-orange: #FFB86C
-$color-yellow: #F1FA8C
-$color-green: #50FA7B
-$color-purple: #BD93F9
-$color-cyan: #8BE9FD
-$color-pink: #FF79C6
-
-// Margins and padding
-$padding: 1em
-
-// Width and height
-$width: 36em
-
-// Header fix
-header h1, header a
-    margin-top: 0
-
-// Navbar
-nav
-    padding-top: $padding
-    padding-bottom: $padding
-
-    border-top: 1px solid $color-comment
-    border-bottom: 1px solid $color-comment
-
-    a
-        padding-right: $padding
-
-// Hyperlinks
-a
-    color: $color-cyan
-    text-decoration: none
-
-    &:hover
-        color: $color-comment
-        text-decoration: underline
-    
-    *
-        color: inherit
-
-// Syntax highlighting with Rouge
-pre
-    padding: $padding
-
-// Blockquotes
-blockquote
-    display: block
-    font-style: italic
-    border-left: 1px solid $color-comment
-    padding-left: $padding
-    margin: 0
-
-// Sticky footer example downloaded from:
-// Source: https://github.com/mdn/css-examples/blob/main/css-cookbook/sticky-footer--download.html
-html
-    height: 100%
-    border-sizing: border-box
-    background: $color-background
-    color: $color-foreground
-
-body
-    height: 100%
-    font: 16pt Helvetica Neue, Helvetica, Arial, sans-serif
-    line-height: 2em
-    padding: 0
-    margin: 0
-
-.wrapper
-    min-height: 100%
-    max-width: $width
-    display: grid
-    grid-template-rows: auto 1fr auto
-    align-items: center
-    margin-right: auto
-    margin-left: auto
-
-header, footer, main 
-    box-sizing: border-box
-    padding: $padding * 2
-    height: 100%
-
-// Layout specific styles
-.page-header
-    padding-bottom: $padding
-
-    h1
-        margin-top: 0
-
-.page-title
-    margin: 0
-
-.page-title+h3
-    font-size: 0.5em
-    color: $color-comment
+// The main sass file, which collates all of the different sass mixins into a
+// single file to be built. Jekyll should copy this file to `/assets/main.css`
+// which means that no other file can share that name in this folder. Ideally,
+// this file should be the only one that relates to site styles. CSS libraries
+// should be included in the `_config.yml` file in the root folder. Ideally,
+// this sass file should be in a separate "styles" folder inside the "assets"
+// folder, but that mean the default minima styles don't get overwritten
+// when this gets run on GitHub Pages and the compatibility is needed.
+@import colors
