--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{{ site.description }}">
     <title>{{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {%- if site.styles -%}
@@ -9,5 +10,9 @@
             <link rel="stylesheet" href="{{ style | relative_url }}">
         {%- endfor -%}
     {%- endif -%}
-    <meta name="description" content="{{ site.description }}">
+    {%- if site.scripts -%}
+        {%- for script in site.scripts -%}
+            <script src="{{ script | relative_url }}"></script>
+        {%- endfor -%}
+    {%- endif -%}
 </head>
