Update font stack and 404 page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@ The base layout from which all others are derived.
     {%- include head.html -%}
     <body>
         {%- include header.html -%}
-        <main>
+        <main aria-label="Site content">
             <div class="wrapper">
                 {{ content }}
             </div>
