--- a/_sass/fonts.sass
+++ b/_sass/fonts.sass
@@ -1,6 +1,9 @@
 // This file is used to define the font stack required by most other sass files
 // on the site. There's a separate one used for code and general content, since
 // code requires a monospaced type in order to be properly legible.
+//
+// Inspired by this article: https://www.sitepoint.com/eight-definitive-font-stacks-2/
 
-$font-stack-content: font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif
-$font-stack-code: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace
+$font-stack-content: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif
+$font-stack-code: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace
+$font-size-base: 16pt !default
