Implement sticky footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header>
-    <a href="{{ "/" | relative_url }}" style="text-decoration: none;">
+<header class="page-header">
+    <a href="{{ "/" | relative_url }}" class="site-title">
         <h1>{{ site.title | escape }}</h1>
     </a>
     {%- include navbar.html -%}
