--- a/_sass/fonts.sass
+++ b/_sass/fonts.sass
@@ -7,3 +7,5 @@
 $font-stack-content: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif
 $font-stack-code: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace
 $font-size-base: 16pt !default
+$font-size-small: $font-size-base * 0.666 !default
+$font-line-height: 2.0 !default
