--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="page-footer">
     <div class="wrapper">
         <small>
             Copyright &copy; {{ site.author }} {{ "Now" | date: "%Y" }},
