--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
 {%- assign page_paths = site.header_pages | default: default_paths -%}
 {%- assign titles_size = site.pages | map: "title" | join: "" | size -%}
 {%- if titles_size > 0 -%}
-    <nav>
+    <nav class="site-nav">
         {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             
