--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: base
 ---
 
 {%- if page.title -%}
-    <div class="page-header">
+    <div class="post-header">
         <h1 class="page-title">{{ page.title }}</h1>
         <h3>
             {%- if page.author -%}
