--- a/_sass/colors.sass
+++ b/_sass/colors.sass
@@ -13,7 +13,7 @@ $color-current-line: #44475a
 $color-selection: #44475a
 $color-foreground: #f8f8f2
 $color-comment: #6272a4
-$color-cyan: #6272a4
+$color-cyan: #8be9fd
 $color-green: #50fa7b
 $color-orange: #ffb86c
 $color-pink: #ff79c6
