--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -42,7 +42,13 @@ pre
 
 /* Blockquotes */
 blockquote
+    border-left: 1px solid $color-light-gray
+    padding-left: $spacing-unit
+    font-style: italic
 
+/* Hyperlinks */
+a
+    color: $color-cyan
 
 /* Sticky footer */
 html, body
