--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -4,4 +4,4 @@
 // single file to be built. Jekyll should copy this file to `/assets/css/main.css`
 // which means that no other file can share that name in this folder. Ideally,
 // this file should be the only one that relates to site styles.
-@import colors, fonts, layout
+@import colors, fonts, layout, syntax-highlighting
