--- a/_sass/syntax-highlighting.sass
+++ b/_sass/syntax-highlighting.sass
@@ -1,9 +1,3 @@
-.highlight table td
-  padding: 5px
-
-.highlight table pre
-  margin: 0
-
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf
   color: #75715e
   font-style: italic
@@ -25,9 +19,9 @@
   font-weight: bold
   font-style: italic
 
-.highlight .err 
-  color: #960050
-  background-color: #1e0010
+.highlight .err // Syntax errors?
+  color: $color-selection
+  background-color: $color-red
 
 .highlight .gi 
   color: #ffffff
@@ -63,154 +57,154 @@
   color: #aaaaaa
 
 .highlight .k, .highlight .kv 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kc 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kd 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kp 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kr 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kt 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .kn 
-  color: #f92672
+  color: $color-pink
   font-weight: bold
 
 .highlight .ow 
-  color: #f92672
+  color: $color-pink
   font-weight: bold
 
 .highlight .o 
-  color: #f92672
+  color: $color-pink
   font-weight: bold
 
 .highlight .mf 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .mh 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .il 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .mi 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .mo 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .m, .highlight .mb, .highlight .mx 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .se 
-  color: #ae81ff
+  color: $color-purple
 
 .highlight .sa 
-  color: #66d9ef
+  color: $color-cyan
   font-weight: bold
 
 .highlight .sb 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .sc 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .sd 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .s2 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .sh 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .si 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .sx 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .sr 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .s1 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .ss 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .s, .highlight .dl 
-  color: #e6db74
+  color: $color-yellow
 
 .highlight .na 
-  color: #a6e22e
+  color: $color-green
 
 .highlight .nc 
-  color: #a6e22e
+  color: $color-green
   font-weight: bold
 
 .highlight .nd 
-  color: #a6e22e
+  color: $color-green
   font-weight: bold
 
 .highlight .ne 
-  color: #a6e22e
+  color: $color-green
   font-weight: bold
 
 .highlight .nf, .highlight .fm 
-  color: #a6e22e
+  color: $color-green
   font-weight: bold
 
 .highlight .no 
-  color: #66d9ef
+  color: $color-cyan
 
 .highlight .bp 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .nb 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .ni 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .nn 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .vc 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .vg 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .vi 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .nv, .highlight .vm 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .w 
-  color: #f8f8f2
+  color: $color-gray
 
 .highlight .nl 
-  color: #f8f8f2
+  color: $color-gray
   font-weight: bold
 
 .highlight .nt 
-  color: #f92672
+  color: $color-pink
 
 .highlight 
-  color: #f8f8f2
+  color: $color-gray
