--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,16 +3,16 @@ layout: base
 ---
 
 {%- if page.title -%}
-    <div class="page-header">
-        <h1 class="page-title">{{ page.title }}</h1>
-        <h3>
+    <div class="post-header">
+        <h1>{{ page.title }}</h1>
+        <h2>
             {%- if page.author -%}
                 by
                 {{ page.author }}
                 on&nbsp;
             {%- endif -%}
             {{ page.date | date: "%b %-d, %Y" }}
-        </h3>
+        </h2>
     </div>
 {%- endif -%}
 
