--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -19,6 +19,8 @@ dl, dd, ol, ul, figure
 ul
     padding-left: $spacing-unit
 
+///////////////////////////////DANGER: BIOHAZARD\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+// TODO: Find some way to contain this eldritch mess and never speak of it again
 // Weird fix I have to include for normalize.css for some reason
 .page-body .page-header
     padding: 0 // Absolutely horrible - don't do this!
@@ -33,8 +35,20 @@ ul
     .wrapper
         p:last-of-type
             margin: 0 // I don't know why or how, but this fixed a major issue
-// Midnight: Oh, there's a weird issue with headers going all over the place
-// 3AM: I AM THE HEADER HAG AND ALL SHALL KNEEL BEFORE ME
+// And now the headers for the site are broken for no reason
+// Why oh why just please let this end
+.page-header a, .page-header h1 // AAAAAAAHHHH
+    margin: 0 !important
+// 11PM: Oh, there's a weird issue with header margins. I can fix that.
+// 3:30AM: I AM THE HEADER HAG AND ALL SHALL KNEEL BEFORE ME.
+
+// There was just one more
+// To hurt me
+// One last time
+.page-footer .wrapper
+    padding-left: 0
+    padding-right: 0
+/////////////////////QUARANTINE ZONE////////////////////////////////////////////
 
 // Establish basic styling rules
 body
