--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
-    <title>{{ site.title }}</title>
+    <title>{% if page.title %}{{ page.title | escape }}{% endif %} &vert; {% if site.title %}{{ site.title | escape }}{% endif %}</title>
     {%- if site.styles -%}
         {%- for style in site.styles -%}
             <link rel="stylesheet" href="{{ style | relative_url }}">
