--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -3,5 +3,6 @@
 // The main sass file, which collates all of the different sass mixins into a
 // single file to be built. Jekyll should copy this file to `/assets/css/main.css`
 // which means that no other file can share that name in this folder. Ideally,
-// this file should be the only one that relates to site styles.
+// this file should be the only one that relates to custom stylesheets outside
+// of imported libraries.
 @import colors, fonts, layout, syntax-highlighting
